--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "Bot_test"
+name = "Quantum_Bot"
 version = "0.1.0"
 edition = "2021"
+authors = ["PFLA"]
+description = "A Discord Bot for the Quantum Server"
 
 [dependencies]
-serenity = "0.12.2"
-tokio = {version="1.41.0",features=["full"]}
+serenity = "*"
+tokio = {version="*",features=["full"]}
+toml = "*"
+serde = {version = "*",features = ["derive"]}
+rand = "*"
